changed cornell to CU, fixed some padding/spacing issues

--- a/imports/ui/css/CourseCard.css
+++ b/imports/ui/css/CourseCard.css
@@ -21,3 +21,9 @@
 #gaugeHolder > div{
   text-align: center;
 }
+
+#coursedetails {
+  padding-top: 80px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
